# flask-sqlalchemy-stubs

./: .gitignore  README.rst  mypy.ini  pyproject.toml  pytest.ini  tags
.vim/: coc-settings.json
examples/: app.py  ext.py  models.py  mypy.ini  sample.py  test_sample.py
flask_sqlalchemy-stubs/: __init__.pyi  _compat.pyi  model.pyi  utils.pyi
flasksqlamypy/: __init__.py  hooks.py  names.py  plugin.py  utils.py
tests/: flsqlamypy.ini  test_flask_sqlalchemy_stubs.py
tests/test-data/: test_basic.yml  test_declarative_plugin.yml  test_stubless_inherit.yml
