[tool.poetry]
name = "flask-sqlalchemy-stubs"
version = "0.0.1"
description = "Stubs for flask-sqlalchemy"
authors = ["ssfdust <ssfdust@gmail.com>"]
readme = "README.rst"
license = "MIT"
packages = [
    {include = "flasksqlamypy"}
]
include = [
	"flask_sqlalchemy-stubs/**/*.pyi",
	"flasksqlamypy/py.typed"
]

[tool.poetry.dependencies]
python = "^3.6"
flask-sqlalchemy = "^2.4.4"
mypy = "^0.790"
sqlalchemy-stubs = "^0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
pytest-cov = "^2.8.1"
pytest-mypy-plugins = "^1.2.1"
py = "^1.8.1"
isort = "^5.6.4"
pdbpp = "^0.10.2"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
